# MicroOS_Assembly

./: CMakeLists.txt  bios.c  bios.h  build.cmd  display_functions.asm  display_functions.s  display_memmory.c  display_memory.c  drivers.c  drivers.h  editor.c  editor.h  filesystem.c  filesystem.h  fileui.c  fileui.h  microos.c  microos.h  notes.txt  settings.c  settings.h  settings_menu.c  settings_menu.h  terminal.c  terminal.h
